# Cropland-Quality-Workflow-Toolkit

./: .env.example  .gitattributes  .gitignore  README.md  Start_CroplandQualityWorkflow.cmd  Start_CroplandQualityWorkflow.ps1  Start_FillTillageDepth.cmd  Start_FillTillageDepth.ps1  Start_GBToSanpuConverter.cmd  Start_GBToSanpuConverter.ps1  pyproject.toml  requirements.txt  run.py  run_area_balance_ui.py  run_fill_tillage_depth.py  run_gb_to_sanpu_converter.py  run_membership_ui.py  run_merge_shp_ui.py  run_update_land_blocks_ui.py  run_update_scores_ui.py  run_workflow_ui.py
.github/workflows/: ci.yml
configs/: default.toml
data/rules/: 江南丘陵山地农林区_机器读取规则.xlsx  渝鄂湘黔边境山地林农牧区_机器读取规则.xlsx  秦岭大巴山林农区_机器读取规则.xlsx  鄂豫皖平原山地农林区_机器读取规则.xlsx  长江中游平原农业水产区_机器读取规则.xlsx
docs/: development_guidelines.md  workflow_manual.qmd
src/cropland_quality_update/: __init__.py  __main__.py  cli.py  paths.py
src/cropland_quality_update/tools/: __init__.py  area_balance_arcpy_ui.py  fill_tillage_depth_arcpy_ui.py  gb_to_sanpu_arcpy_ui.py  membership_arcpy_ui.py  merge_common_arcpy_ui.py  recalculate_scores_arcpy_ui.py  update_land_blocks_arcpy_ui.py  update_scores_arcpy_ui.py  vector_common_arcpy.py  workflow_arcpy_ui.py
tests/: test_environment.py  test_gb_to_sanpu_converter.py  test_membership_optional_altitude.py  test_output_safety.py  test_recalculate_scores.py  test_update_land_blocks_optional_altitude.py  test_update_scores_optional_altitude.py
